--- a/education.html
+++ b/education.html
@@ -12,6 +12,7 @@
 				<li><a href="index.html">Home</a></li>
 				<li><a href="project.html">Projects</a></li>
 				<li><a href="education.html">Education</a></li>
+                <li><a href="certification.html">Certifications</a></li>
 			</ul>
 		</nav>
 	</header>
