--- a/project.html
+++ b/project.html
@@ -14,6 +14,7 @@
 				<li><a href="index.html">Home</a></li>
 				<li><a href="project.html">Projects</a></li>
 				<li><a href="education.html">Education</a></li>
+				<li><a href="certification.html">Certifications</a></li>
 			</ul>
 		</nav>
 	</header>
